--- a/QuanLyPhongTro/Control/DanKyTaiKhoanKhachHang0.resx
+++ b/QuanLyPhongTro/Control/DanKyTaiKhoanKhachHang0.resx
@@ -121,7 +121,7 @@
   <data name="btnQuayLai.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAE
-        tQAABLUBypZCUAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAIMSURBVFhHYxgF
+        tAAABLQBGNGgtAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAIMSURBVFhHYxgF
         o2CoAUYgrmZiZHwGpHvBInQEnEC8HIj/87Cx/gfS/4BYBIjpAiSBXj8FpP+nm2r+r3MwAjkAhJVAkrQG
         hsAgfwrE//o9LP9/qUn83+RkQjcHBAEt/gYM8r9rI1zBltPLAaDEVgMk/snx8/w9nR4ItxzNAUZALEQG
         ZgNinIADiBcD8X9LWfF/D4siUSwH4RZnuAPIwkCP/QLS1UCMAUSAkseB9P9YfdX/7yrjMSwH4Vv54f8r
@@ -136,7 +136,7 @@
   <data name="buttonSua.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAE
-        tQAABLUBypZCUAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAANXSURBVFhH7ZZb
+        tAAABLQBGNGgtAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAANXSURBVFhH7ZZb
         SFRRFIbnoqljaGreUlOM1AKdTMxKH1KjF6MguodCUiQYBJlmkWUREaUvkl2gwpCgaDTLsCy8pJIYOpYP
         ZkYjWib1Um9FOGf1r6Njx83GSxgi+MPH9pzZ7m/NOfsyuvnMlfiDLFAOasEjUASSgQH8tziD83q9/ida
         WuDiYvcPChr29PYa5msGn1nRJoAZjzsGb0BLsevXKcX37lJd/0dqHOxXsXS00cH8PHIzmezo9xv9joBS
@@ -157,10 +157,49 @@
   <data name="buttonHuy.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAE
-        tQAABLUBypZCUAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAACeSURBVFhH7ZLB
+        tAAABLQBGNGgtAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAACeSURBVFhH7ZLB
         EcIgEEWBCvSoB46Ba6ACYkmxlDhjrETtJlagFWz+ZvRgAUQP/808OHB4O4AhhBBC/oUtvDjnHtbaV021
         gdYINxpewMEdm8QYpW1TVUOIoi00b0sc7KF03UGG4bSKpZRlCLjTAXSRnLP0/XEVU0pfAyh6HeK9l6YJ
         VdWGtuBVwx/0Q4x4lwk+KzuhdX43CSGEkF9jzAxtSRgpRUWzuwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="btnLuu.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAABLgAAAS4AcOmL8MAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAADV0lEQVRYR+2WbUhTURjHtzmbTtDsBTVnikQvgi6TZaUfSqEvRoFkrygkRYIfgkyzyLKoiNI+RIZg
+        mBRGhJVimQa2xFIUN8sPZlaTmTYKor4V4e7T/7k6m5fjzKFC4B9+XM/Z9fye+3LOuar5/C8JATngDmgC
+        daAEbAEaMGvxBefVavVPHGmBTucMCQ8fCVoUPMJtBr9ZcUwEM54ADG7GkeI3bZRK71VTs/0jvRi2y9RY
+        OuhQYQH56/VOnPcb5x0BZSq1ulej0fxAnw3tm8AIvEoNkCUuqYgGaxcZoqKcfC6kFLPWKKVuSyOjyUQ+
+        Pj4S+pnTYFrZDmjnwWyh1B3rVwc19XRTTkE+1bS2yG0Xjy2dZEpO5gL4ceXxwP+a1sDghSNP+3uFUnfc
+        hSI6hgYpNiFBUms0vzCuYXR4z1kMnDuyMoVCJSKpkqqGevmFBYUsmComQPkll4VCJSKhEsuXzxQYFMTv
+        yQPZMEW2AjpTXiYUKhEJRYSGh3MBzbLBQ/biTf6EIxWVXRMKlYhkIjBdJYz9HWNnyCZBjgNaFhnpPHrp
+        Ij0ftAmF7lS/aqG6jjahUElpVSWFGQzydAUnWegeXlKldclJUuP7t0KZiLjE9RS/IVEoFNE+OIBpmeRa
+        G1JYLAe3xswrWm2PVSiajJVxsbTGGCeUTYb5XS/pAwJ49Rx/H3RoONP27RFKPOFNAUx65n5+DPw4/LiA
+        1YByi4uEEk94W0DeubOudYHdquXcyM7PE0o84W0Bh/OPuQqI4ALUWCYdq4xxkkjiCW8LwP9I2DGH2c0F
+        cIoBFZReEYomw5sCTpWWuK5+wg7Je3+PBtsnb7/PbP1CoZLpFMBTMPdEobxF446/gVM/qv6bMBTRjiP5
+        YUryHE9M2Uw36mtlWeOHPrpQWTFhgVIW0OUYoqu3b1Gb3Sa3eRNKSk2R1wr/AL28LcPxEsdQForC33e7
+        wSOc2IfnZMMantVqtwcboqPT0U86na7mrtm8hPu0Wm231tf3tdXhWPqkszMUawlvNrQiJiaD+yKiow/g
+        rg5gnD70PwS7gNffkPzCXAf8/O4DLegawwfwByv/VgFm7UNVWYRljDmRu8JFlAMWfhuD/+a+8Wk123G/
+        E3N25cpwEQ1jzNmVz2eGo1L9AXCdmpPWZCEsAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnThem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAABLgAAAS4AcOmL8MAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAACrUlEQVRYR+2XzWsTURTFZ1IXtRIU26qrxqY0UBdKW0G0SQy2gg2iNNb6vbPGqu2iaLCVomCIUNAU
+        0YVL/wZFF65EqlBqVRQbxbWouPBjYyXJ9dxbXkg1eTNJJ1l54MfNS96bc2bezMsbowoyQQtokFaV5TZN
+        8yEquUwzgzou31ZJ7hU15jNUGtwaIr+nlfgziPOPlVYDzvwlKl3Z1Uc/Ju7Q1/Hb1OvbrEJMcqdKyY1J
+        f4dKkc4dYq74Ek3Q7g1eFaIi04E5N6ZRqTuwiYLBIE0djYr59zOT9K1/jD5HYtTV2ES4Qmn0WyujHFLO
+        /PolPy2kztLFkb0S4jKmgc0VJ1s61FXw8EAlL+ixgPsU0hLzzIdzAocYPNwuZsO+bWKe2NItbfR/wAOV
+        JkAWqGTFeAv+1ioc7DEqJc5vz5kz2dQALcz5aV+oXsYHGj1Sa0x5OtxAxAsEP6NPwAA4qKEN5EtrTq8D
+        wq/nXdTmrRNzl2m8Qc2ZszoA/3hKWvZly5xJxhbvfPR/j7qOB+erE5QaoBzzp6hLzlyp1ACOmrNKCeC4
+        OctuAI15f9nmLDsBKmbOsgpQi4P9s8gUMr9xIWfO/W2Zs6wCHAB0dVR/5uWas6wCJPHHQR+nr8F4pKB5
+        OZc9X9oAWDZnWzeup/T8XUqnbsH8kKPmLF2AlS6XmT6x3y8BMq9uUnZuFMYhO+a8bM8D3g9qpQuwE9Dx
+        IxH6OTNF2dm48OnREMWHm5V5sTnvA9ynV1oa6QKMAQqHwxTu8dOxcDv5mhb/2RiLG86RAPdAzpCnA/fE
+        DD4nAT8dtaCYHAkQA/cB79+CoA7YlSMBlqP/AWwHUDui09JyTrKEgz3S0mgN+A1eAA7BV2K5RAHvMXmv
+        2QwsNQQ4BCd2Cn7xKOntZzXg6eB7wgnqgYUM4w9uVG5J1IajmgAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
